[package]
name = "convdim"
version = "0.1.0"
authors = ["FractalArt <FractalArt@users.noreply.github.com>"]
description = "Compute the output dimension of a convolutional layer in convolutional neural networks."
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
