[package]
name = "convdim"
version = "0.2.0"
authors = ["FractalArt <FractalArt@users.noreply.github.com>"]
description = "Compute the output dimension of a convolutional layer in convolutional neural networks."
edition = "2018"
license = "MIT/Apache-2.0"
categories = ["command-line-utilities"]
homepage = "https://github.com/FractalArt/convdim"
repository = "https://github.com/FractalArt/convdim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3"
toml = "0.5.0"
serde = { version = "1.0", features = ["derive"] }

